--- a/templates/mixins/youth.jade
+++ b/templates/mixins/youth.jade
@@ -1,3 +1,3 @@
 mixin youth(youth)
 	p
-		a(href='/keystone/youths/' + youth.id)= youth.name.full
+		a(href='/youthDetail/' + youth.id)= youth.name.full
